--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,15 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+}
+body {
+  font-family: 'Roboto', sans-serif;
+
+  /* background-image: linear-gradient(135deg, #b92b27 10%, #1565C0 100%); */
+  /* background-image: linear-gradient(135deg, #00B4DB 10%, #0083B0 100%); */
+  margin: 0;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
